syntax = "proto3";

package test;

service TestService {
  rpc Test (TestRequest) returns (TestResponse);
}

message TestRequest {
  int32 number = 1;
}

message TestResponse {
  repeated int32 result = 1;
}
